namespace WebApplication1.DTOs
{
    public class CarDTO
    {
        public int Id { get; set; }
        public required string SerialNumber { get; set; }
    }
}
